--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
 <!-- 1️⃣ Add this right under the existing <script> that does the fetch -->
 <script>
-  /* ---------------- Helper Functions ---------------- */
+  /* ---------------- Helper Functions ------------- */
   async function loadDashboard() {
     const container = document.getElementById('dynamicContent');
 
