--- a/index.html
+++ b/index.html
@@ -279,7 +279,12 @@
         <h6>Quick Links</h6>
         <ul class="list-unstyled">
           <li><a href="#">Home</a></li>
-          <li><a href="#">Shop</a></li>
+          <li><a href="src/main/resources/pages/men.html">Men</a></li>
+          <li><a href="src/main/resources/pages/women.html">Women</a></li>
+          <li><a href="src/main/resources/pages/bundle.html">Bundle</a></li>
+          <li><a href="src/main/resources/pages/couple.html">Couple</a></li>
+          <li><a href="src/main/resources/pages/accessories.html">Accessories</a></li>
+          <li><a href="src/main/resources/pages/luxury.html">Luxury</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
