--- a/src/main/resources/pages/women.html
+++ b/src/main/resources/pages/women.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mens | Dionx</title>
+  <title>Womens | Dionx</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="../../resources/css/dashboard.css" />
@@ -26,19 +26,20 @@
 </a>
 
 <!-- Title -->
-<h2>Bundles</h2>
+<h2>Mens Watches</h2>
 
 <!-- Products Grid -->
 <div class="products-grid">
-  <!--BUNDLE 1-->
-  <a href="bundles/Bundle-1.html?id=3" class="card-link">
+
+  <!--WOMEN 1-->
+  <a href="../../resources/pages/watches/Watch-3.html?id=4" class="card-link">
     <div class="card">
-      <img src="../../resources/assets/bundle/1/bundle 1 - 1.webp" alt="Women's Classic Watch">
-      <h4>5pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
+      <img src="../../resources/assets/watches/3/watch 3 - 1.webp" alt="Women's Classic Watch">
+      <h4>Elegant Ladies Quartz Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,397.00</span>
-        <span class="original">2,390.69</span>
+        <span class="current">1,499.00</span>
+        <span class="original">2,100.55</span>
       </div>
     </div>
   </a>
