--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -70,7 +70,7 @@
   </a>
 
   <!--BUNDLE 1-->
-  <a href="src/main/resources/pages/watches/Bundle-1.html?id=3" class="card-link">
+  <a href="src/main/resources/pages/bundles/Bundle-1.html?id=3" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/bundle/1/bundle 1 - 1.webp" alt="Women's Classic Watch">
       <h4>5pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
@@ -78,6 +78,19 @@
         <span class="currency">LKR</span>
         <span class="current">1,397.00</span>
         <span class="original">2,390.69</span>
+      </div>
+    </div>
+  </a>
+
+  <!--WOMEN 1-->
+  <a href="src/main/resources/pages/watches/Watch-3.html?id=4" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/watches/3/watch 3 - 1.webp" alt="Women's Classic Watch">
+      <h4>Elegant Ladies Quartz Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">1,499.00</span>
+        <span class="original">2,100.55</span>
       </div>
     </div>
   </a>
