--- a/src/main/resources/pages/watches/Watch-3.html
+++ b/src/main/resources/pages/watches/Watch-3.html
@@ -74,7 +74,7 @@
       </div>
       <div class="color-option" data-price="1,499" data-original="2100.55">
         <img src="../../assets/watches/3/watch 3 - 3.webp" alt="Golden Strap Black Dial" />
-        <div class="color-label">White</div>
+        <div class="color-label">Silver</div>
       </div>
     </div>
 
