--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -7,6 +7,96 @@
 
   <link rel="stylesheet" href="src/main/resources/css/dashboard.css" />
 
+  <style>
+    .featured-watch {
+      display: flex;
+      align-items: flex-start; /* aligns content to the top */
+      gap: 1rem;
+      margin: 1.5rem;
+      padding: 1rem;
+      background-color: var(--black);
+      border: 3px solid var(--gold);
+      border-radius: 12px;
+      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
+      transition: transform 0.2s;
+      cursor: pointer;
+    }
+
+    .featured-link:hover .featured-watch {
+      transform: translateY(-4px);
+    }
+
+    .featured-image img {
+      width: 220px;
+      height: 220px;
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .featured-details {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
+      text-align: left;
+    }
+
+    .featured-details h4 {
+      font-size: 1.3rem;
+      color: white;
+      margin: 0 0 0.4rem;
+      font-weight: 500;
+    }
+
+    .featured-desc {
+      font-size: 0.7rem;
+      color: darkgray;
+      margin-bottom: 0.6rem;
+      line-height: 1.4;
+      max-width: 100%;
+    }
+
+    .featured-details .price {
+      display: flex;
+      align-items: baseline;
+      gap: 4px;
+      flex-wrap: nowrap;
+      white-space: nowrap;
+    }
+
+    .featured-details .currency {
+      font-size: 1rem;
+      color: var(--white);
+    }
+
+    .featured-details .current {
+      font-size: 1.5rem;
+      font-weight: bold;
+      color: var(--gold);
+    }
+
+    .featured-details .original {
+      font-size: 1rem;
+      text-decoration: line-through;
+      color: darkgray
+    }
+
+    .section-divider {
+      border: none;
+      border-top: 1px solid black;
+      margin: 1.5em 1.5rem;
+    }
+
+    .featured-link {
+      text-decoration: none;
+      color: inherit;
+      display: block;
+    }
+
+
+
+  </style>
 </head>
 <body>
 
@@ -39,6 +129,74 @@
 
 <!-- Title -->
 <h2>Featured Watches</h2>
+
+<div class="featured-watches">
+  <!-- #1 -->
+  <a href="src/main/resources/pages/watches/Watch-1.html?id=1"
+     class="featured-link featured-watch-item">
+    <div class="featured-watch">
+      <div class="featured-image">
+        <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch 1">
+      </div>
+      <div class="featured-details">
+        <h4>Binbond's Casual Blue Skeleton Quartz Watch with Date Indicator</h4>
+        <p class="featured-desc">
+          High‑quality build with a lightweight metal band – perfect for school, sports, holidays, or everyday wear.
+        </p>
+        <div class="price">
+          <span class="currency">LKR</span>
+          <span class="current">3,400.00</span>
+          <span class="original">4,369.28</span>
+        </div>
+      </div>
+    </div>
+  </a>
+
+  <!-- #2 -->
+  <a href="src/main/resources/pages/watches/Watch-2.html?id=2"
+     class="featured-link featured-watch-item">
+    <div class="featured-watch">
+      <div class="featured-image">
+        <img src="src/main/resources/assets/watches/2/watch 2 - 1.webp" alt="Watch 2">
+      </div>
+      <div class="featured-details">
+        <h4>Trendy And Elegant Quartz Wristwatch</h4>
+        <p class="featured-desc">
+          Slim design with a charming finish – perfect for classy outfits and occasions.
+        </p>
+        <div class="price">
+          <span class="currency">LKR</span>
+          <span class="current">1,099.00</span>
+          <span class="original">1,391.37</span>
+        </div>
+      </div>
+    </div>
+  </a>
+
+  <!-- #3 -->
+  <a href="src/main/resources/pages/bundles/Bundle-1.html?id=3"
+     class="featured-link featured-watch-item">
+    <div class="featured-watch">
+      <div class="featured-image">
+        <img src="src/main/resources/assets/bundle/1/bundle 1 - 1.webp" alt="Bundle 1">
+      </div>
+      <div class="featured-details">
+        <h4>5 pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
+        <p class="featured-desc">
+          Gift‑ready bundle with multiple styles – ideal for personal use or surprises.
+        </p>
+        <div class="price">
+          <span class="currency">LKR</span>
+          <span class="current">1,397.00</span>
+          <span class="original">2,390.69</span>
+        </div>
+      </div>
+    </div>
+  </a>
+</div>
+
+<hr class="section-divider">
+
 
 <!-- Products Grid -->
 <div class="products-grid">
@@ -95,8 +253,20 @@
     </div>
   </a>
 
-</div>
+  <!--BUNDLE 2-->
+  <a href="src/main/resources/pages/bundles/Bundle-2.html?id=4" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/bundle/2/bundle 2 - 1.webp" alt="Women's Classic Watch">
+      <h4>6-Piece Women’s Watch & Bracelet Set</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">1,400.00</span>
+        <span class="original">2,450.55</span>
+      </div>
+    </div>
+  </a>
 
+</div>
 
 </body>
 </html>
