--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -10,9 +10,8 @@
   <style>
     .featured-watch {
       display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      gap: 1rem;
+      align-items: center;
+      gap: 0.75rem;
       margin: 1.5rem;
       padding: 1rem;
       background-color: var(--black);
@@ -21,25 +20,19 @@
       box-shadow: 0 3px 8px rgba(0, 0, 0, 0.05);
       transition: transform 0.2s;
       cursor: pointer;
-      flex-wrap: wrap;
     }
 
-    @media (max-width: 768px) {
-      .featured-watch {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
+    .featured-link:hover .featured-watch {
+      transform: translateY(-4px);
+    }
 
-      .featured-details {
-        align-items: center;
-        text-align: center;
-      }
+    .featured-image {
+      flex: 0 0 220px;
+      max-width: 220px;
     }
 
     .featured-image img {
       width: 100%;
-      max-width: 220px;
       height: auto;
       object-fit: cover;
       border-radius: 8px;
@@ -100,10 +93,51 @@
       display: block;
     }
 
+    .section-divider {
+      border: none;
+      border-top: 1px solid black;
+      margin: 1.5em 1.5rem;
+    }
 
+    /* 🔁 RESPONSIVE TWEAKS FOR MOBILE */
+    @media (max-width: 575.98px) {
+      .featured-watch {
+        gap: 0.5rem;
+        padding: 0.8rem;
+      }
 
+      .featured-image {
+        flex: 0 0 32vw;
+        max-width: 32vw;
+      }
 
+      .featured-details h4 {
+        font-size: 1.05rem;
+      }
+
+      .featured-desc {
+        font-size: 0.65rem;
+      }
+
+      .featured-details .price {
+        gap: 2px;
+      }
+
+      .featured-details .currency {
+        font-size: 0.9rem;
+      }
+
+      .featured-details .current {
+        font-size: 1.2rem;
+      }
+
+      .featured-details .original {
+        font-size: 0.8rem;
+      }
+    }
   </style>
+
+
 </head>
 <body>
 
