--- a/src/main/resources/pages/bundles/Bundle-2.html
+++ b/src/main/resources/pages/bundles/Bundle-2.html
@@ -16,24 +16,23 @@
 <a href="javascript:history.back()" class="back-button" aria-label="Go back">
     <img src="../../assets/imgs/back.png" alt="Back" />
 </a>
-<div class="product-id">ID: WB6555</div>
+<div class="product-id">ID: WB8736</div>
 
 <div class="container">
 
     <!-- Thumbnails -->
     <div class="thumbs" id="thumbs">
-        <img src="../../assets/bundle/1/bundle%201%20-%201.webp" alt="Bundle 1" class="active" />
-        <img src="../../assets/bundle/1/bundle%201%20-%206.webp" alt="Bundle 6" />
-        <img src="../../assets/bundle/1/bundle%201%20-%202.webp" alt="Bundle 2" />
-        <img src="../../assets/bundle/1/bundle%201%20-%203.webp" alt="Bundle 3" />
-        <img src="../../assets/bundle/1/bundle%201%20-%204.webp" alt="Bundle 4" />
-        <img src="../../assets/bundle/1/bundle%201%20-%205.webp" alt="Bundle 5" />
+        <img src="../../assets/bundle/2/bundle 2 - 1.webp" alt="Bundle 1" class="active" />
+        <img src="../../assets/bundle/2/bundle 2 - 4.webp" alt="Bundle 4" />
+        <img src="../../assets/bundle/2/bundle 2 - 5.webp" alt="Bundle 5" />
+        <img src="../../assets/bundle/2/bundle 2 - 2.webp" alt="Bundle 2" />
+        <img src="../../assets/bundle/2/bundle 2 - 3.webp" alt="Bundle 3" />
     </div>
 
     <!-- Main Image with Arrows -->
     <div>
         <div style="position: relative;">
-            <img id="mainImage" src="../../assets/bundle/1/bundle%201%20-%201.webp" alt="Main Watch" class="main-image" />
+            <img id="mainImage" src="../../assets/bundle/2/bundle 2 - 1.webp" alt="Main Watch" class="main-image" />
             <button id="prevBtn" class="arrow-btn left">‹</button>
             <button id="nextBtn" class="arrow-btn right">›</button>
 
@@ -42,11 +41,11 @@
 
     <!-- Product Details -->
     <div class="details">
-        <h1 class="title">5pcs Men's Fashion Quartz Watch & Bracelet Set</h1>
+        <h1 class="title">6-Piece Women’s Watch & Bracelet Set</h1>
 
         <div class="price-section">
-            <div id="price">LKR 1397.00</div>
-            <div class="original-price" id="originalPrice">LKR 2,390.69</div>
+            <div id="price">LKR 1400.00</div>
+            <div class="original-price" id="originalPrice">LKR 2,450.55</div>
         </div>
 
         <p class="description">
