--- a/src/main/resources/pages/bundle.html
+++ b/src/main/resources/pages/bundle.html
@@ -43,7 +43,21 @@
     </div>
   </a>
 
+  <!--BUNDLE 2-->
+  <a href="bundles/Bundle-2.html?id=3" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/bundle/2/bundle 2 - 1.webp" alt="Women's Classic Watch">
+      <h4>6-Piece Women’s Watch & Bracelet Set</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">1,400.00</span>
+        <span class="original">2,450.55</span>
+      </div>
+    </div>
+  </a>
 </div>
+
+
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
