--- a/src/main/resources/pages/couples/Couple-1.html
+++ b/src/main/resources/pages/couples/Couple-1.html
@@ -74,7 +74,7 @@
       </div>
       <div class="color-option" data-price="5,299" data-original="6890.00">
         <img src="../../assets/couples/1/couple 1 - 12.webp" alt="White Steel Black Surface" />
-        <div class="color-label">Golden-Silver</div>
+        <div class="color-label">🔥Golden-Silver</div>
       </div>
       <div class="color-option" data-price="5,299" data-original="6890.00">
         <img src="../../assets/couples/1/couple 1 - 13.webp" alt="White Steel Black Surface" />
