--- a/src/main/resources/pages/men.html
+++ b/src/main/resources/pages/men.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mens | Dionx</title>
+    <title>Mens | Dionz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <link rel="stylesheet" href="../../resources/css/dashboard.css" />
