--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -58,7 +58,7 @@
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="3,400" data-original="4369.28">
                 <img src="../../assets/watches/1/watch 1 - 3.webp" alt="White Steel Black Surface" />
-                <div class="color-label">Blue</div>
+                <div class="color-label">🔥Blue</div>
             </div>
             <div class="color-option" data-price="3,340" data-original="4067.01">
                 <img src="../../assets/watches/1/watch 1 - 2.webp" alt="White Steel Black Surface" />
