--- a/src/main/resources/pages/watches/Watch-2.html
+++ b/src/main/resources/pages/watches/Watch-2.html
@@ -60,7 +60,7 @@
         <div class="colors" id="colors">
             <div class="color-option selected" data-price="1,099" data-original="1391.37">
                 <img src="../../assets/watches/2/watch 2 - 2.webp" alt="White Steel Black Surface" />
-                <div class="color-label">Silver Blue</div>
+                <div class="color-label">🔥Silver Blue</div>
             </div>
             <div class="color-option" data-price="1,099" data-original="1391.37">
                 <img src="../../assets/watches/2/watch 2 - 4.webp" alt="White Steel Black Surface" />
