--- a/src/main/resources/pages/watches/Watch-3.html
+++ b/src/main/resources/pages/watches/Watch-3.html
@@ -62,7 +62,7 @@
     <div class="colors" id="colors">
       <div class="color-option selected" data-price="1,499" data-original="2100.55">
         <img src="../../assets/watches/3/watch 3 - 1.webp" alt="White Steel Black Surface" />
-        <div class="color-label">Blue</div>
+        <div class="color-label">🔥Blue</div>
       </div>
       <div class="color-option" data-price="1,499" data-original="2147.55">
         <img src="../../assets/watches/3/watch 3 - 2.webp" alt="White Steel Black Surface" />
