--- a/src/main/resources/pages/couple.html
+++ b/src/main/resources/pages/couple.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Mens | Dionz</title>
+  <title>Couple | Dionz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="../../resources/css/dashboard.css" />
@@ -26,38 +26,25 @@
 </a>
 
 <!-- Title -->
-<h2>Bundles</h2>
+<h2>Couple Watches</h2>
 
 <!-- Products Grid -->
 <div class="products-grid">
-  <!--BUNDLE 1-->
-  <a href="bundles/Bundle-1.html?id=3" class="card-link">
+
+  <!--WOMEN 1-->
+  <a href="../../resources/pages/couples/Couple-1.html?id=4" class="card-link">
     <div class="card">
-      <img src="../../resources/assets/bundle/1/bundle 1 - 1.webp" alt="Women's Classic Watch">
-      <h4>5pcs Men's Fashion Quartz Watch & Bracelet Set</h4>
+      <img src="../../resources/assets/couples/1/couple 1 - 1.webp" alt="Women's Classic Watch">
+      <h4>Elegant Ladies Quartz Watch</h4>
       <div class="price">
         <span class="currency">LKR</span>
-        <span class="current">1,397.00</span>
-        <span class="original">2,390.69</span>
+        <span class="current">5,299.00</span>
+        <span class="original">6,890.00</span>
       </div>
     </div>
   </a>
 
-  <!--BUNDLE 2-->
-  <a href="bundles/Bundle-2.html?id=3" class="card-link">
-    <div class="card">
-      <img src="../../resources/assets/bundle/2/bundle 2 - 1.webp" alt="Women's Classic Watch">
-      <h4>6-Piece Women’s Watch & Bracelet Set</h4>
-      <div class="price">
-        <span class="currency">LKR</span>
-        <span class="current">1,400.00</span>
-        <span class="original">2,450.55</span>
-      </div>
-    </div>
-  </a>
 </div>
-
-
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
