--- a/src/main/resources/pages/women.html
+++ b/src/main/resources/pages/women.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Womens | Dionx</title>
+  <title>Womens | Dionz</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="../../resources/css/dashboard.css" />
