--- a/index.html
+++ b/index.html
@@ -212,6 +212,72 @@
     @media (max-width: 767px) {
       footer .col-6:not(:last-child) { margin-bottom: 2rem; }
     }
+
+
+    /*Popup------------*/
+
+    /* 🔔 POPUP CARD */
+    .popup-card-container {
+      position: fixed;
+      bottom: 2rem;
+      right: 2rem;
+      z-index: 9999;
+      animation: fadeInUp 0.5s ease forwards;
+    }
+
+    .popup-card {
+      position: relative;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+      padding: 0.6rem;
+      max-width: 220px;
+      transition: transform 0.3s ease;
+    }
+
+    .popup-close {
+      position: absolute;
+      top: -10px;
+      left: -10px;
+      background: var(--black);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 26px;
+      height: 26px;
+      font-size: 1rem;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    .popup-close:hover {
+      background: var(--gold);
+      color: var(--black);
+    }
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    /* Responsive */
+    @media (max-width: 575.98px) {
+      .popup-card-container {
+        right: 1rem;
+        left: 1rem;
+        bottom: 1rem;
+      }
+      .popup-card {
+        max-width: 100%;
+      }
+    }
+
   </style>
 
 </head>
@@ -315,6 +381,25 @@
   </div>
 </footer>
 
+<!-- 🔔 POP-OUT CARD -->
+<div id="popupCard" style="display:none;" class="popup-card-container">
+  <div class="popup-card">
+    <button class="popup-close" onclick="closePopup()">✕</button>
+    <a href="src/main/resources/pages/couples/Couple-1.html?id=5" class="card-link">
+      <div class="card">
+        <img src="src/main/resources/assets/couples/1/couple 1 - 1.webp" alt="Two Round Rhinestone Roman Dial">
+        <h4>Two Round Rhinestone Roman Dial</h4>
+        <div class="price">
+          <span class="currency">LKR</span>
+          <span class="current">5,299.00</span>
+          <span class="original">6,890.00</span>
+        </div>
+      </div>
+    </a>
+  </div>
+</div>
+
+
 <!-- 1️⃣ Add this right under the existing <script> that does the fetch -->
 <script>
   /* ---------------- Helper Functions ------------- */
@@ -369,6 +454,24 @@
   window.addEventListener('pageshow', initOnce);
 </script>
 
+<script>
+  function showPopupCard() {
+    const popup = document.getElementById('popupCard');
+    if (popup) {
+      popup.style.display = 'block';
+    }
+  }
+
+  function closePopup() {
+    const popup = document.getElementById('popupCard');
+    if (popup) {
+      popup.style.display = 'none';
+    }
+  }
+
+  // Show popup after 5 seconds
+  setTimeout(showPopupCard, 5000);
+</script>
 
 
 
