--- a/index.html
+++ b/index.html
@@ -269,14 +269,17 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        right: 1rem;
-        left: 1rem;
-        bottom: 2rem;
+        bottom: 1rem;
+        left: 50%;
+        transform: translateX(-50%);
+        right: auto;
       }
+
       .popup-card {
-        max-width: 90%;
+        max-width: 90vw;
       }
     }
+
 
   </style>
 
