--- a/index.html
+++ b/index.html
@@ -269,10 +269,11 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        bottom: 1rem;
+        top: 50%;
         left: 50%;
-        transform: translateX(-50%);
+        bottom: auto;
         right: auto;
+        transform: translate(-50%, -50%);
       }
 
       .popup-card {
