--- a/index.html
+++ b/index.html
@@ -269,11 +269,13 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
+        position: fixed;
         top: 50%;
         left: 50%;
         bottom: auto;
         right: auto;
         transform: translate(-50%, -50%);
+        z-index: 9999;
       }
 
       .popup-card {
