--- a/index.html
+++ b/index.html
@@ -269,22 +269,14 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;            /* make the container fill the viewport */
-        margin: auto;       /* “auto” margin + equal insets = centred */
-        display: flex;      /* flexbox = easy centring */
-        align-items: center;/* vertical centring */
-        justify-content: center; /* horizontal centring */
-        transform: none;
+        right: 1rem;
+        left: 1rem;
+        bottom: 2rem;
       }
-
       .popup-card {
-        max-width: 90vw;
+        max-width: 90%;
       }
     }
-
 
   </style>
 
