--- a/index.html
+++ b/index.html
@@ -269,7 +269,8 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        right: 2rem;
+        right: 1rem;
+        left: 4rem;
         bottom: 5rem;
       }
       .popup-card {
