--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        right: 0rem;
+        left: 0rem;
         bottom: 5rem;
       }
       .popup-card {
