--- a/index.html
+++ b/index.html
@@ -269,8 +269,9 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        left: 0rem;
-        bottom: 5rem;
+        position: fixed;
+        right: 1rem;
+        bottom: 4rem;
       }
       .popup-card {
         max-width: 80%;
