--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
     /* Responsive */
     @media (max-width: 575.98px) {
       .popup-card-container {
-        position: fixed;
         right: 1rem;
+        left: 3rem;
         bottom: 4rem;
       }
       .popup-card {
