--- a/src/main/resources/pages/men.html
+++ b/src/main/resources/pages/men.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="../../resources/css/dashboard.css" />
     <link rel="stylesheet" href="../css/watch.css" />
+    <link rel="stylesheet" href="../css/browse_more.css" />
 
     <style>
         body {
@@ -16,6 +17,9 @@
             flex-direction: column;
             min-height: 100vh;
         }
+
+
+
     </style>
 
 </head>
@@ -58,6 +62,16 @@
     </a>
 
 </div>
+
+<!-- Browse More Button -->
+<div style="text-align: center; margin: 30px 0;">
+    <a href="../../../../index.html" class="browse-more-btn">
+        Browse More
+    </a>
+</div>
+
+
+
 
 <script>
     document.addEventListener('DOMContentLoaded', () => {
