--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -18,13 +18,11 @@
     .offer-watch {
       display: flex;
       align-items: center;
+      width: 100%;
       gap: 0.75rem;
-      margin: 1.5rem;
-      padding: 1rem;
+      padding: 2rem;
       background: linear-gradient(135deg,  #6f4e37, #c2a563, #a8882d, #a86b2d, #a83b2d,#a82d2d);
       background-size: 300% 300%;
-      border: 3px solid var(--gold-light);
-      border-radius: 12px;
       box-shadow: 0 3px 8px rgba(0,0,0,0.05);
       transition: transform 0.2s;
       cursor: pointer;
@@ -75,7 +73,7 @@
       font-size: 0.7rem;
       color: white;
       margin-bottom: 0.6rem;
-      line-height: 1.4;
+      line-height: 2.4;
     }
 
     /* price */
@@ -325,6 +323,8 @@
 
 <hr class="section-divider">
 
+<!--------------------------------->
+
 <h2 style="color: #917c4c">Special Offer</h2>
 
 <div class="special-offer-wrapper">
@@ -352,7 +352,7 @@
   </div>
 </div>
 
-
+<hr class="section-divider">
 
 </body>
 </html>
