--- a/src/main/resources/pages/dashboard.html
+++ b/src/main/resources/pages/dashboard.html
@@ -22,7 +22,7 @@
         <a href="src/main/resources/pages/bundle.html"      class="category-item"><span>Bundle</span></a>
         <a href="src/main/resources/pages/couple.html"      class="category-item"><span>Couple</span></a>
         <a href="src/main/resources/pages/accessories.html" class="category-item"><span>Accessories</span></a>
-        <a href="src/main/resources/pages/luxury.html"      class="category-item"><span>Luxury</span></a>
+        <a href="src/main/resources/pages/cases.html"      class="category-item"><span>Cases</span></a>
       </div>
     </div>
 
@@ -108,6 +108,8 @@
 
 <hr class="section-divider">
 
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
 
 <!-- Products Grid -->
 <div class="products-grid">
@@ -178,7 +180,7 @@
   </a>
 
   <!--COUPLE 1-->
-  <a href="src/main/resources/pages/couples/Couple-1.html?id=5" class="card-link">
+  <a href="src/main/resources/pages/couples/Couple-1.html?id=6" class="card-link">
     <div class="card">
       <img src="src/main/resources/assets/couples/1/couple 1 - 1.webp" alt="Women's Classic Watch">
       <h4>Two Round Rhinestone Roman Dial</h4>
@@ -190,11 +192,38 @@
     </div>
   </a>
 
+  <!--WOMEN 2-->
+  <a href="src/main/resources/pages/watches/Watch-4.html?id=7" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/watches/4/watch 4 - 8.webp" alt="Women's Classic Watch">
+      <h4>CURREN Ladies' Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">7,000.00</span>
+        <span class="original">10,130.57</span>
+      </div>
+    </div>
+  </a>
+
+  <!--MEN 3-->
+  <a href="src/main/resources/pages/watches/Watch-5.html?id=7" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/watches/5/watch 5 - 1.webp" alt="Women's Classic Watch">
+      <h4>CURREN Ladies' Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">7,000.00</span>
+        <span class="original">10,130.57</span>
+      </div>
+    </div>
+  </a>
+
 </div>
 
 <hr class="section-divider">
 
-<!--------------------------------->
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
 
 <h2 style="color: #917c4c">Special Offer</h2>
 
@@ -224,6 +253,26 @@
 </div>
 
 <hr class="section-divider">
+
+<!------------------------------------------------------------------------------------------------------------------------>
+<!------------------------------------------------------------------------------------------------------------------------>
+
+<!-- Products Grid -->
+<div class="products-grid">
+
+  <!--WATCH 1-->
+  <a href="src/main/resources/pages/watches/Watch-1.html?id=1" class="card-link">
+    <div class="card">
+      <img src="src/main/resources/assets/watches/1/watch 1 - 1.webp" alt="Watch">
+      <h4>Binbond Casual Blue Skeleton Quartz Watch - Youthful Style</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">3,400.00</span>
+        <span class="original">4,369.28</span>
+      </div>
+    </div>
+  </a>
+</div>
 
 </body>
 </html>
