--- a/src/main/resources/pages/women.html
+++ b/src/main/resources/pages/women.html
@@ -45,6 +45,19 @@
     </div>
   </a>
 
+  <!--WOMEN 2-->
+  <a href="../../resources/pages/watches/Watch-4.html?id=7" class="card-link">
+    <div class="card">
+      <img src="../../resources/assets/watches/4/watch 4 - 8.webp" alt="Women's Classic Watch">
+      <h4>CURREN Ladies' Watch</h4>
+      <div class="price">
+        <span class="currency">LKR</span>
+        <span class="current">7,000.00</span>
+        <span class="original">10,130.57</span>
+      </div>
+    </div>
+  </a>
+
 </div>
 
 <!-- Browse More Button -->
