--- a/src/main/resources/pages/watches/Watch-1.html
+++ b/src/main/resources/pages/watches/Watch-1.html
@@ -9,6 +9,11 @@
 
     <link rel="stylesheet" href="../../css/watch.css" />
 
+    <style>
+
+
+    </style>
+
 </head>
 <body>
 
@@ -93,6 +98,14 @@
         <button class="buy-btn" id="buyNowBtn">Buy Now</button>
 
     </div>
+</div>
+
+<!-- Promo Video Section -->
+<div class="promo-video">
+    <video autoplay muted loop playsinline>
+        <source src="../../assets/watches/1/watch%201%20-%207.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+    </video>
 </div>
 
 <!-- JavaScript -->
