--- a/src/main/resources/pages/bundles/Bundle-2.html
+++ b/src/main/resources/pages/bundles/Bundle-2.html
@@ -69,6 +69,14 @@
     </div>
 </div>
 
+<!-- Promo Video Section -->
+<div class="promo-video">
+    <video autoplay muted loop playsinline>
+        <source src="../../assets/bundle/2/bundle%202%20-%206.mp4" type="video/mp4" />
+        Your browser does not support the video tag.
+    </video>
+</div>
+
 <!-- JavaScript -->
 <script src="../../js/js.js"></script>
 
