--- a/src/main/resources/pages/watches/Watch-3.html
+++ b/src/main/resources/pages/watches/Watch-3.html
@@ -95,6 +95,14 @@
   </div>
 </div>
 
+<!-- Promo Video Section -->
+<div class="promo-video">
+  <video autoplay muted loop playsinline>
+    <source src="../../assets/watches/3/watch%203%20-%209.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+</div>
+
 <!-- JavaScript -->
 <script src="../../js/js.js"></script>
 
